# reversl

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: config.py  database.py  main.py
app/admin_panel/: router.py
app/admin_panel/filters/: messages.py  users.py
app/admin_panel/routes/: __init__.py  api.py  ssr.py  ws.py
app/admin_panel/static/css/: base.css
app/admin_panel/static/js/: adaptiveMain.js  chat.js  editChatInfo.js  editUserInfo.js  editUserPermissions.js  main.js  messenger.js  ws.js
app/admin_panel/static/templates/: auth.j2  base.j2  chats.j2  header.j2  home.j2  main.j2  sidebar.j2  users.j2
app/admin_panel/static/templates/modals/: editChatInfo.j2  editUserInfo.j2  editUserPermissions.j2  fileHandling.j2
app/api/: router.py
app/api/routers/: auth.py
app/core/: constants.py  exceptions.py  rediss.py  typess.py
app/dependencies/: auth.py  csrf_protect.py  users.py
app/middlewares/: csrf_protect.py  process_time.py
app/models/: __init__.py  chat.py  message.py  message_file.py  permission.py  user.py
app/schemas/: auth.py  chats.py  common.py  messages.py  users.py
app/services/: api_service.py  chats.py  chats_service.py  users.py  users_service.py
app/utils/: file_streamer.py
app/web/admin_panel/: router.py
app/web/admin_panel/static/templates/: auth.j2  base.j2  chats.j2  sidebar.j2  users.j2
app/web/api/: router.py
app/web/dependencies/: auth.py  csrf.py  users.py
app/web/middlewares/: csrf.py  process_time.py
migrations/: env.py
migrations/versions/: 0d6646b85c2f_init.py  4224b70307aa_init.py  64162c2fd872_init.py
