[project]
name = "reversl"
version = "0.1.0"
description = "Free feedback form handler"
authors = [
    {name = "egorzh",email = "egor2001zhukov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
